<resources>
    <string name="app_name">GroceryShare</string>
    <string name="address">Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="done">Done</string>
    <string name="avatar">Avatar</string>
    <string name="sign_up">Sign Up</string>
    <string name="Shopper">Shopper</string>
    <string name="current_trips_fulfilling">Current Trips Fulfilling</string>
    <string name="shopping_trips_available">Shopping Trips Available</string>
    <string name="past_fulfillments">Past Fulfillments</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="ratings_and_reviews">Ratings and Reviews</string>
    <string name="problems">Problems?</string>
    <string name="add_button_text">Add</string>
    <string name="item_editText_hint">Write a new item (include quantity)</string>

    <string name="on_off">On/Off</string>


    <string name="complaint_form">Complaint Form</string>

    <string name="describe_your_problem">Describe your problem</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="check_if_related_to_an_order">Check if related to an order</string>
    <string name="wrong_address">Wrong address</string>
    <string name="other">Other</string>
    <string name="check_if_related_to_app">Check if related to app</string>
    <string name="payment_issue">Payment Issue</string>
    <string name="submit_complaint">Submit Complaint</string>
    <string name="order_name_placeholder">Order ID</string>
    <string name="upload_receipt">Upload Receipt</string>
    <string name="confirm_order_complete">Confirm Order Complete</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="view_order_info">View Order Info</string>
    <string name="view_shopping_list">View Shopping List</string>
    <string name="order_info">Order Info</string>
    <string name="shopping_list">Shopping List</string>
    <string name="rate">Rate</string>
    <string name="tell_us_about_your_experience_with_this_customer">Tell us about your experience with this customer...</string>
    <string name="problem_image">problem image</string>
    <string name="star_image">star image</string>
    <string name="tool_image">tool image</string>

    <string name="checkbox_image">checkbox image</string>
    <string name="clipboard_image">clipboard image</string>
    <string name="search_image">search image</string>
    <string name="update_any_profile_information">Update any profile information</string>
    <string name="let_us_know_about_any_problems_with_the_app">Let us know about any problems with the app</string>
    <string name="look_at_your_reviews_and_ratings">Look at your reviews and ratings</string>
    <string name="look_at_previous_trips">Look at previous trips \n</string>
    <string name="access_shopping_list_and_trip_information">Access shopping list and trip information</string>
    <string name="search_for_a_shopping_trip_to_complete">Search for a shopping trip to complete</string>
    <string name="click_to_add_profile_picture">Click to add profile picture</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <!-- Strings used for fragments for navigation -->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="upload">Upload</string>
    <string name="next">Next</string>
    <string name="can_upload_multiple_photos">*Can upload multiple photos</string>
    <string name="log_out">Log Out</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>

    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Preference Titles -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>

    <!-- Messages Preferences -->
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="change_personal_information">Change Personal Information</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Logout</string>
    <string name="back_button">Back Button</string>
    <string name="unassign_order">Unassign Order</string>
    <string name="name">Name</string>
    <string name="store">Store</string>
    <string name="distance">Distance</string>
    <string name="buyer_profile_photo">Buyer\'s Profile Photo</string>
    <string name="your_privacy_is_important_to_us_it_is_groceryshare_s_policy_to_respect_your_privacy_regarding_any_information_we_may_collect_from_you_through_our_app_groceryshare_we_only_ask_for_personal_information_when_we_truly_need_it_to_provide_a_service_to_you_we_collect_it_by_fair_and_lawful_means_with_your_knowledge_and_consent_we_also_let_you_know_why_we_re_collecting_it_and_how_it_will_be_used_we_only_retain_collected_information_for_as_long_as_necessary_to_provide_you_with_your_requested_service_what_data_we_store_we_ll_protect_within_commercially_acceptable_means_to_prevent_loss_and_theft_as_well_as_unauthorized_access_disclosure_copying_use_or_modification_we_don_t_share_any_personally_identifying_information_publicly_or_with_third_parties_except_when_required_to_by_law_our_app_may_link_to_external_sites_that_are_not_operated_by_us_please_be_aware_that_we_have_no_control_over_the_content_and_practices_of_these_sites_and_cannot_accept_responsibility_or_liability_for_their_respective_privacy_policies_you_are_free_to_refuse_our_request_for_your_personal_information_with_the_understanding_that_we_may_be_unable_to_provide_you_with_some_of_your_desired_services_your_continued_use_of_our_app_will_be_regarded_as_acceptance_of_our_practices_around_privacy_and_personal_information_if_you_have_any_questions_about_how_we_handle_user_data_and_personal_information_feel_free_to_contact_us_this_policy_is_effective_as_of_30_july_2020_privacy_policy_created_with_getterms">Your privacy is important to us. It is GroceryShare\'s policy to respect your privacy regarding any information we may collect from you through our app, GroceryShare. We only ask for personal information when we truly need it to provide a service to you. We collect it by fair and lawful means, with your knowledge and consent. We also let you know why we’re collecting it and how it will be used. We only retain collected information for as long as necessary to provide you with your requested service. What data we store, we’ll protect within commercially acceptable means to prevent loss and theft, as well as unauthorized access, disclosure, copying, use or modification. We don’t share any personally identifying information publicly or with third-parties, except when required to by law. Our app may link to external sites that are not operated by us. Please be aware that we have no control over the content and practices of these sites, and cannot accept responsibility or liability for their respective privacy policies. You are free to refuse our request for your personal information, with the understanding that we may be unable to provide you with some of your desired services. Your continued use of our app will be regarded as acceptance of our practices around privacy and personal information. If you have any questions about how we handle user data and personal information, feel free to contact us. This policy is effective as of 30 July 2020. Privacy Policy created with GetTerms.</string>

    <!-- Sync Preferences -->
    <string-array name="frequency">
        <item>Select Frequency</item>
        <item>Daily</item>
        <item>Twice a week</item>
        <item>Once a week</item>
        <item>Every Other Week</item>
        <item>Once in a While</item>
    </string-array>
    <string-array name="names">
        <item>Malkiel Asher</item>
        <item>Joe Wasser</item>
        <item>Rebecca Rossman</item>
        <item>Pepper</item>
        <item>Jimmy Oman</item>
        <item>Alex Sanberdo</item>
        <item>Charlie Ensamble</item>
    </string-array>
    <string-array name="store">
        <item>Aldi</item>
        <item>Walmart</item>
        <item>Wegmans</item>
        <item>Food Bazaar</item>
        <item>Target</item>
        <item>Tesco</item>
        <item>Wegmans</item>
    </string-array>
    <string-array name="distance">
        <item>0.3 Miles</item>
        <item>0.4 Miles</item>
        <item>0.8 Miles</item>
        <item>1.2 Miles</item>
        <item>1.7 Miles</item>
        <item>2.5 Miles</item>
        <item>2.7 Miles</item>
    </string-array>
</resources>