<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightwhite"
    tools:context=".ComplaintsShopper">

    <LinearLayout
        android:layout_width="398dp"
        android:layout_height="624dp"
        android:baselineAligned="false"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="105dp">

        <TextView
            android:id="@+id/complaintTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/complaint_form"
            android:textSize="30dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/problemInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="30sp"
            android:autofillHints=""
            android:ems="13"
            android:fontFamily="sans-serif-medium"
            android:gravity="start|top"
            android:hint="@string/describe_your_problem"
            android:inputType="textMultiLine"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/checkBoxComplaintGeneral"
            android:layout_width="297dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="30sp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/check_if_related_to_an_order"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/wAddressCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50sp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/wrong_address"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/payIssue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50sp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/payment_issue"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/otherOrderCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50sp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:hint="@string/other"
            android:inputType="textPersonName" />


        <CheckBox
            android:id="@+id/appIssueCheck"
            android:layout_width="283dp"
            android:layout_height="57dp"
            android:layout_marginLeft="5sp"
            android:baselineAligned="false"
            android:fontFamily="sans-serif-medium"
            android:text="@string/check_if_related_to_app"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/otherIssueCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginTop="10sp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/other"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="20sp" />

        <Button
            android:id="@+id/submitComplaintBtn"
            android:layout_width="209dp"
            android:layout_height="66dp"
            android:layout_marginLeft="180sp"
            android:background="@drawable/joinbtn"
            android:elevation="5dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/submit_complaint"
            android:textAllCaps="false"
            android:textColor="@color/whitecolor"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>