<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsBuyer">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <ImageView
            android:id="@+id/GoBackIcon"
            android:layout_width="56dp"
            android:layout_height="45dp"
            android:onClick="goBack"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:contentDescription="@string/back_button" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintLeft_toLeftOf="@+id/GoBackIcon"
            android:text="@string/settings"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-light"
            android:textSize="20sp" />


    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notifswitch"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/notifications"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout1" />

    <Button
        android:id="@+id/personalinfo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/signupbtn"
        android:fontFamily="sans-serif-light"
        android:text="@string/change_personal_information"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifswitch" />

    <Button
        android:id="@+id/privacypolicy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/signupbtn"
        android:fontFamily="sans-serif-light"
        android:text="@string/privacy_policy"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personalinfo" />

    <Button
        android:id="@+id/changePasswordBuyer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/signupbtn"
        android:fontFamily="sans-serif-light"
        android:text="Reset Password"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/privacypolicy"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/logoutbtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/signupbtn"
        android:fontFamily="sans-serif-light"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changePasswordShopper" />


</androidx.constraintlayout.widget.ConstraintLayout>